zod/tests/ui/fail/tuple_structs_default_before_non_default_field.rs
use zod::zod;
use zod::Namespace;

#[derive(zod, serde::Deserialize)]
#[zod(namespace = "Ns")]
struct Test(#[serde(default)] String, String);

struct Ns {}

impl Namespace for Ns {
    const NAME: &'static str = "Ns";
}

fn main() {}
